# adventofcode2020

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  aoc.h  create_day.py  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  stl.h
src/test/: template.h  test_day01.cpp  test_day02.cpp  test_day03.cpp  test_day04.cpp  test_day05.cpp  test_day06.cpp  test_day07.cpp  test_day08.cpp  test_day09.cpp
